# pypyiserver-update

./: README.md  license.txt  pyproject.toml
src/pypiserver_update/: __init__.py  application_settings.py  graceful_interrupt_handler.py  pypiserver_update_app.py  pypiserver_update_main.py  pypiserver_update_settings.py  safe_edit.py  terminalsize.py
tests/: test_pypiserver_update.py
